# Nexus

./: .gitignore  CMakeLists.txt
Empty/: CMakeLists.txt  EmptyApplication.cpp
Framework/: CMakeLists.txt
Framework/Common/: Allocator.cpp  Allocator.hpp  BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  GfxConfiguration.hpp  GraphicsManager.cpp  GraphicsManager.hpp  MemoryManager.cpp  MemoryManager.hpp  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp  Interface.hpp
Platform/: CMakeLists.txt
Platform/Empty/: EmptyApplication.cpp
Platform/Linux/: helloengine_opengl.cpp  helloengine_xcb.c
Platform/Windows/: CMakeLists.txt  D3d12Application.cpp  OpenGLApplication.cpp  OpenGLApplication.hpp  WindowsApplication.cpp  WindowsApplication.hpp  copy.ps  copy.vs  helloengine_d2d.cpp  helloengine_d3d.cpp  helloengine_win.c
RHI/: CMakeLists.txt
RHI/D3d/: CMakeLists.txt  D3d12GraphicsManager.cpp  D3d12GraphicsManager.hpp
RHI/OpenGL/: CMakeLists.txt  OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.hpp
