CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
set(CMAKE_C_COMPILER "clang-cl")
set(CMAKE_C_FLAGS "-Wall")
set(CMAKE_C_FLAGS_DEBUG "/Debug")
set(CMAKE_C_FLAGS_MINSIZEREL "-Os -DNDEBUG")
set(CMAKE_C_FLAGS_RELEASE "-O4 -DNDEBUG")
set(CMAKE_C_FLAGS_RELWITHDEBINFO "-O2 /Debug")
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_COMPILER "clang-cl")
set(CMAKE_CXX_FLAGS "-Wall -Xclang -std=gnu++14")
set(CMAKE_CXX_FLAGS_DEBUG "/Debug")
set(CMAKE_CXX_FLAGS_MINSIZEREL "-Os -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "-O4 -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 /Debug")
PROJECT(Nexus)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/Framework/Common")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/Framework/Interface")
ADD_SUBDIRECTORY(Framework)
ADD_SUBDIRECTORY(Empty)
ADD_SUBDIRECTORY(Platform)
